<resources>
    <string name="app_name">Solace</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="book_rickshaw">Book Rickshaw</string>
    <string name="book_rickshaw_icon">Rickshaw Icon</string>
    <string name="book_e_cycle">Book E-Cycle</string>
    <string name="book_e_cycle_icon">E-Cycle Icon</string>
    <string name="slot">Bike %s</string>
    <string name="amount">₹ %s</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="empty_slot">Empty Slot</string>
    <string name="slot_is_already_occupied">Slot is already occupied</string>
    <string name="entry">Entry</string>
    <string name="exit">Exit</string>
    <string name="cost_calculation">Ride cost calculation</string>
    <string name="note_for_user"><b>Note -</b> Cost calculation is started at the time when the user start the ride</string>
    <string name="ride_duration">Ride Duration</string>
    <string name="duration">%s minutes</string>
    <string name="pay">Pay</string>
    <string name="ride_date_time"><![CDATA[Ride date & time]]></string>
    <string name="logout">Logout</string>
    <string name="select_pickup_location">Select Pickup Location</string>
    <string name="select_drop_location">Select Drop Location</string>
    <string name="confirm">Confirm</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="where_are_you_going">Where are you going?</string>
    <string name="pickup">Pickup:</string>
    <string name="drop">Drop:</string>
    <string name="distance">Distance:</string>
    <string name="name">Name</string>
    <string name="student">Student</string>
    <string name="driver">Driver</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="register_as">Register as</string>
    <string name="estimate">Estimate:</string>
    <string name="search_location">Search location</string>
    <string name="select_location">Select location</string>
    <string name="search">Search</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="drop_location">Drop Location</string>
    <string name="money">Money</string>
</resources>