<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/MyToolbarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/MyPopupMenuTheme"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white" />
    <!-- Map Fragment -->
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/mToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Pickup Location -->
            <TextView
                android:id="@+id/tvPickupLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawablePadding="10dp"
                android:hint="@string/select_pickup_location"
                android:padding="12dp"
                android:textColor="@color/quantum_black_100"
                app:drawableStartCompat="@drawable/baseline_location_on_24"
                app:drawableTint="@color/red" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="20dp"
                android:background="@color/quantum_grey" />
            <!-- Drop Location -->
            <TextView
                android:id="@+id/tvDropLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawablePadding="10dp"
                android:hint="@string/select_drop_location"
                android:padding="12dp"
                android:textColor="@color/quantum_black_100"
                app:drawableStartCompat="@drawable/baseline_location_on_24"
                app:drawableTint="@color/green" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnBookRickshaw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="5dp"
        android:text="@string/book_rickshaw"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
